<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="30dp"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageRecipe"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/placeholder"
        android:scaleType="centerCrop"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/titleRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageRecipe"
        app:layout_constraintTop_toTopOf="parent"
        tool:text="Recipe Title" />

    <TextView
        android:id="@+id/descriptionRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@id/imageRecipe"
        app:layout_constraintTop_toBottomOf="@id/titleRecipe"
        app:layout_constraintEnd_toStartOf="@id/shareButton"
        tool:text="Recipe Description" />

    <ImageView
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/share"
        android:contentDescription="@string/share_button"
        app:layout_constraintStart_toEndOf="@id/imageRecipe"
        app:layout_constraintTop_toBottomOf="@id/descriptionRecipe" />

    <ImageView
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/like"
        android:contentDescription="@string/like_button"
        app:layout_constraintStart_toEndOf="@id/shareButton"
        app:layout_constraintTop_toBottomOf="@id/descriptionRecipe" />


</androidx.constraintlayout.widget.ConstraintLayout>